package com.exemplo;

public class Atletismo implements Competicao {
    @Override
    public void realizarProva() {
        System.out.println("Prova de Atletismo realizada.");
    }
}
