package com.exemplo;
public interface Competicao {
  void realizarProva();
}
