package com.exemplo;

public abstract class CompeticaoFactory {
    public abstract Competicao criarCompeticao();
}
