package com.exemplo;

public class Natacao implements Competicao {
    @Override
    public void realizarProva() {
        System.out.println("Prova de Natação realizada.");
    }
}
